fixed asset name alignment for long names

--- a/client-reactjs/src/index.css
+++ b/client-reactjs/src/index.css
@@ -636,4 +636,5 @@ div.tooltip {
 
 .asset-name i {
   padding-right: 5px;
+  display: inline;
 }
